# hexlet_python_learn

./: pyproject.toml
hexlet_python_learn/: fill.py  flatten.py  format_person_info.py  get.py  get_average.py  get_children.py  get_colors.py  get_fibonacci.py  get_girl_friends.py  get_max.py  get_the_nearest_location.py  get_value.py  group_by.py  id_generator.py  index_of.py  invert_case.py  main.py  say_prime_or_not.py  sequence_sum.py  slice.py  smallest_divisor.py  take_last.py  update_inventory.py
